fix projects on mobile

--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -124,16 +124,21 @@
 .projectHeaderGraphic {
   height: 5vh;
   margin-bottom: 2vh;
-  border-radius: 6px 6px 0 0;
+  border-radius: 8px 8px 0 0;
   background-size: 200% 200%;
 }
 
 @media (max-width: 540px) {
   .project {
     /* margin: 2%; */
-    padding: 12%;
+
     width: 100%;
   }
+
+  .projectText {
+    padding: 12%;
+  }
+
   .resumeTag {
     margin-top: 3%;
   }
